add memory recommendation and turn off parallelExecution